Prevent `SegmentedControl-text` from wrapping (#2174)
* Prevent SegmentedControl-text from wrapping

* Create poor-dots-play.md

--- a/src/segmented-control/segmented-control.scss
+++ b/src/segmented-control/segmented-control.scss
@@ -90,6 +90,8 @@
 // Text -----------------------------------------
 
 .SegmentedControl-text {
+  white-space: nowrap;
+
   // renders a visibly hidden "copy" of the text in bold, reserving box space for when text becomes bold on selected
   &[data-content]::before {
     display: block;
